# WhisperServerLocal

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  main.py  pyproject.toml  requirements.txt
app/: __init__.py  audio_processor.py  concurrency.py  config.py  main.py  orchestrator.py  whisper_service.py
app/rabbitmq/: __init__.py  consumer.py  producer.py  result_producer.py
app/utils/: __init__.py
cmd/orchestrator/: main.go
internal/config/: config.go
internal/rabbitmq/: connection.go  consumer.go  producer.go  types.go
internal/validator/: file.go
internal/worker/: pool.go  process_pool.go
python/: audio_processor.py  requirements.txt  whisper_service.py  worker.py
